--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>The Legendary BMW M</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/css/uikit.min.css" />
+
+
+
+    <title>Pic1</title>
 </head>
+
 <body>
+    <header class="card-panel black darken-2">
+        <h1 class="white-text uk-align-left z-depth-5 uk-text-bold">Pic1</h1>
+
+<form class="uk-search">
+    <input class="uk-search-input white-text text-lighten-2 uk-text-center" type="search" placeholder="Type here to search">
+</form>
+<button class="uk-button-primary uk-button-small">Search</button>
+
+<a class="waves-effect waves-light btn-small uk-align-right">Pizza</a>
+<a class="waves-effect waves-light btn-small uk-align-right">Cars</a>
+<a class="waves-effect waves-light btn-small uk-align-right">BMW</a>
+<a class="waves-effect waves-light btn-small uk-align-right">Person waving</a>
+<div class="uk-align-right white-text">Previous Results:
+</div>
+    </header>
     
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit-icons.min.js"></script>
+
 </body>
 </html>
